gcc/testsuite/algol68/compile/error-widening-8.a68
# { dg-options "-fstropping=upper" }  #

BEGIN
   LONG LONG REAL d := LONG 3.14; # { dg-error "coerced" }  #
   d
END
